--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				Playing to: <span>5</span>
 			</h3>
 			<input type="number" min="1" step="1">
-			<button id="p1" type="button" class="btn btn-primary">Player One</button>
+			<button id="p1" type="button" class="btn btn-success">Player One</button>
 			<button id="p2" type="button" class="btn btn-danger">Player Two</button>
 			<button id="reset"type="button" class="btn btn-dark">Reset</button>
 		</div>
