--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<input type="number" min="1" step="1">
 			<button id="p1" type="button" class="btn btn-success">Player One</button>
 			<button id="p2" type="button" class="btn btn-danger">Player Two</button>
-			<button id="reset"type="button" class="btn btn-dark">Reset</button>
+			<button id="reset"type="button" class="btn btn-primary">Reset</button>
 		</div>
 	</div>
 	<script type="text/javascript" src="assets/js/scorekeeper.js"></script>
